# starwars-api-reqwest

./: Cargo.toml  README.md
src/: main.rs
