[package]
name = "starwars-api-reqwest"
version = "0.1.0"
edition = "2021"
authors = ["Apoclyps"]
description = "A simple example of using the Star Wars API with reqwest"

[dependencies]
env_logger = { version = "0.9.0" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.14" }
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.139", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.91" }
dotenv = "0.15.0"